# ff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  default.nix  flake.nix  shell.nix
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: fuzzy-finder.md  tui-functions.md
docs/src/development/: release.md  testing.md
docs/src/getting-started/: building.md  installation.md  quick-start.md
docs/src/usage/: cli.md  library.md
docs/src/user-guide/: cli-usage.md  tui-controls.md
src/: bench.rs  config.rs  help.rs  input.rs  lib.rs  tests.rs
src/cli/: args.rs  main.rs  mod.rs  planner.rs  shell.rs  tty.rs
src/fuzzy/: finder.rs  lsh.rs  matching.rs  mod.rs  quicksort.rs  scoring.rs  stream.rs  tree.rs
src/tui/: buffer.rs  controls.rs  events.rs  layout.rs  mod.rs  preview.rs  ui.rs
tests/: cli_integration_tests.rs  fuzzy_integration_tests.rs  input_integration_tests.rs
