[package]
name = "ff"
version = "1.0.1"
edition = "2021"
description = "small simple fuzzy finder"
authors = ["jacbart"]
license = "MIT"
repository = "https://github.com/jacbart/ff"
keywords = ["fuzzy", "finder", "tui", "terminal"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
crossterm = "0.29"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.20"

[build-dependencies]
vergen = { version = "9", features = ["build", "rustc"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "ff"
path = "src/bin/ff.rs"

[lib]
name = "ff"
path = "src/lib.rs"
