[package]
name = "ff"
version = "1.0.5"
edition = "2021"
description = "small simple not so percise finder"
authors = ["jacbart"]
license = "MIT"
repository = "https://github.com/jacbart/ff"
keywords = ["fuzzy", "finder", "tui", "terminal"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
crossterm = "0.29"
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.20"

[build-dependencies]
vergen = { version = "9", features = ["build", "rustc"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "ff"
path = "src/bin/ff.rs"

[lib]
name = "ff"
path = "src/lib.rs"
